[project]
name = "seohub"
version = "0.1.0"
description = "SEOhub — платформа для iGaming SEO"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "aiogram>=3.13",
    "jinja2>=3.1",
    "openpyxl>=3.1",
    "httpx>=0.27",
    "anthropic>=0.40",
    "apscheduler>=3.10",
    "telethon>=1.37",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.34",
    "aiosqlite>=0.20",
    "coverage>=7.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._editable"
